Make header width 100% to fix alignment issues under global ia title block flag

--- a/components/Layout/_styles.scss
+++ b/components/Layout/_styles.scss
@@ -44,6 +44,7 @@
 %header,
 %footer {
   flex: 0 0 auto;
+  width: 100%;
 }
 
 %body {
